--- a/build-android/app/src/main/res/drawable/splashlandscape.xml
+++ b/build-android/app/src/main/res/drawable/splashlandscape.xml
@@ -1,6 +1,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
   <!-- The background color, preferably the same as your normal theme -->
-  <item android:drawable="@color/cuglred"/>
+  <item android:drawable="@color/black"/>
   <!-- Your product logo -->
   <item>
     <bitmap
