Add icons to xcode

--- a/build-apple/Resources/Landscape.storyboard
+++ b/build-apple/Resources/Landscape.storyboard
@@ -19,11 +19,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LandscapeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="j3F-2s-llb">
-                                <rect key="frame" x="128" y="47" width="480" height="320"/>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="LandscapeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="j3F-2s-llb">
+                                <rect key="frame" x="0.0" y="0.0" width="736" height="414"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.93335378170000005" green="0.2353082299" blue="0.18826454879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="j3F-2s-llb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="YhQ-XR-cH0"/>
                             <constraint firstItem="j3F-2s-llb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pHB-So-CfQ"/>
@@ -32,7 +32,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.989130434782609" y="373.91304347826087"/>
         </scene>
     </scenes>
     <resources>
