--- a/build-apple/Resources/Portrait.storyboard
+++ b/build-apple/Resources/Portrait.storyboard
@@ -19,11 +19,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PortraitLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Pgp-Mz-xwa">
-                                <rect key="frame" x="47" y="128" width="320" height="480"/>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="PortraitLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Pgp-Mz-xwa">
+                                <rect key="frame" x="332" y="361" width="414" height="736"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.93335378170000005" green="0.2353082299" blue="0.18826454879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Pgp-Mz-xwa" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1CL-r6-Cw5"/>
                             <constraint firstItem="Pgp-Mz-xwa" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3mj-rd-zaf"/>
@@ -32,7 +32,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="374.18478260869568"/>
         </scene>
     </scenes>
     <resources>
